2017-07-17  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	makejvf version 20170717.
	* Makefile.am: Add version.h.
	* main.c: Move version declaration to version.h.
	* makejvf.h, tfmread.c, write.c: Improve enhanced mode;
	More compatible with normal mode, by reading glue/kern table
	more deliberately.
	* version.h: Added.
	* makejvf.1: Update.

2017-07-16  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	makejvf version 20170716.
	* COPYRIGHT: Add Takuji Tanaka and Japanese TeX Development
	Community to the author.
	* main.c, makejvf.h, tfmread.c, write.c: Add enhanced mode;
	If -e option is specified, horizontal shift amount for each
	characters are determined from glue/kern table of input JFM.

2017-07-15  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* main.c, makejvf.h, uniblock.[ch], write.c: Move more non-Kanji
	Unicode blocks to non-Kanji TFM on UCS mode. Support output of
	Hankaku-kana PS TFM.

2017-07-12  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* write.c: Fix a bug in generating non-Kanji TFM on UCS mode.
	Now all non-Kanji char codes are included in non-Kanji TFM.
	* makejvf.1: -a and -k options are never supported, per README.txt.

2017-07-11  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* write.c: Fix a bug which occurs when -3 and -K are used at
	the same time (Thanks Takayuki YATO). Char code consistency in
	AFM parsing (though -a option is never supported).

2017-07-10  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* write.c: Fix a bug in -m option on UCS mode.

2017-07-01  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* makejvf.1: More detailed description in English.
	* tests/min10.{tfm,vf}: Remove redundant entry JIS 2577.
	* tests/tmin10.vf, makejvf.test: Correct command-line option.
	Now all test files are the same with ptex-fonts.

2017-01-15  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	Update for upTeX-1.22.
	* uniblock.c: Update references Unicode blocks Blocks-9.0.0.txt.