@@ -379,12 +379,12 @@ void writevfu(int code, FILE *fp)
 				}
 			}
 			else
-				skip=(int)((0.1)*zw);
+				skip = -(zw-w); /* skip=(int)((0.1)*zw); */
 			if (code == 0x2018) {
-				skip2+=-(int)((0.65)*zh);
+				skip2+=0; /* skip2+=-(int)((0.65)*zh); */
 			}
 			else {
-				skip2+=-(int)((0.6)*zh);
+				skip2+=0; /* skip2+=-(int)((0.6)*zh); */
 			}
 
 			if (kanatfm)
@@ -502,12 +502,12 @@ void writevfu(int code, FILE *fp)
 				}
 			}
 			else
-				skip=(int)((0.4)*zw);
+				skip = zw; /* skip=(int)((0.4)*zw); */
 			if (code == 0x2019) {
-				skip2+=(int)((0.65)*zh);
+				skip2+=0; /* skip2+=(int)((0.65)*zh); */
 			}
 			else {
-				skip2+=(int)((0.6)*zh);
+				skip2+=0; /* skip2+=(int)((0.6)*zh); */
 			}
 
 			if (kanatfm)
