@@ -1,3 +1,10 @@
+2017-07-20  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
+
+	makejvf version 20170720.
+	* write.c: Improve -m option for UCS mode.
+	* version.h: Adjusted.
+	* makejvf.1: Add documentation of -m option.
+
 2017-07-17  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
 
 	makejvf version 20170717.
